Fix caption and button size on mobile

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -12,7 +12,7 @@
   bottom: 0px;
   height: 100%;
   width: 100%;
-  padding-top: 20%;
+  padding-top: 15%;
   font-size: 2rem;
   @media only screen and (min-width: 992px) {
     left: 35%;
@@ -20,7 +20,8 @@
     width: 30%;
     height: 25%;
     bottom: 20px;
-    padding-top: 0%;
+    padding-bottom: 10px;
+    padding-top: 10px;
     font-size: 1rem;
   }
 }
@@ -39,4 +40,15 @@
     position:absolute;
     top:40%;
   }
+}
+
+#carouselIndex .btn{
+  font-size: 2rem;
+  @media only screen and (min-width: 992px) {
+    font-size: 1rem;
+  }
+}
+
+#carouselIndex h4{
+  font-size: 2rem;
 }
